# Eubic_Dev_hackathon_2025

./: .gitignore  29papers.csv  PRIDE_API_reanalysis.ipynb  Pubmed_id_of_sdrf_annotated_PRIDE_projects.csv  Pubmed_id_of_sdrf_annotated_github_projects.csv  README.md  README_eubic.txt  SElect_diverse_corpus.ipynb  annotation.conf  column_name_to_entity.py  column_names.txt  column_names_filtered.txt  common.py  flowchart-of-plans.emf  get_all_column_names.py  kb_shortcuts.conf  move.sh  tagger2standoff.py  template_column_names.txt  tools.conf  visual.conf
Bert/: Test_fuzzy.py  bert_ner_predict.py  bert_training_script.py  brat_to_json_new.py  evaluate_fuzzy_matches.py
Combined_all/: 20089766.txt  21081695.txt  24776597.txt  25074045.txt  25316064.txt  25405705.txt  25515538.txt  25755297.txt  25886026.txt  26035336.txt  26081835.txt  26112675.txt  26306861.txt  26360816.txt  26496610.txt  26572953.txt  26731301.txt  26760575.txt  26801919.txt  27027324.txt  28071813.txt  28364001.txt  28382632.txt  28424693.txt  28439285.txt  28960076.txt  29678115.txt  30245083.txt  30300549.txt  30728824.txt  30798302.txt  31009805.txt  31075098.txt  31316139.txt  31424513.txt  31642809.txt  31733513.txt  31773964.txt  31814417.txt  31862015.txt  (+55 more)
Final_annotation/: annot.py  entity_annot.py
GPT_annotated/: 21183079.ann  24657495.ann  (+26 more)
supplement_parser_src/: README.md  environment.yml  main.py  pyproject.toml
supplement_parser_src/files/: entity_synonyms.json
supplement_parser_src/src/: Sample name clustering.py  get_content.py  match_entities.py  read_file.py  read_txt.py
(+333 files in other folders)
